--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "@types/react-dom": "18.0.11",
     "axios": "1.3.4",
     "clsx": "1.2.1",
+    "countries-list": "3.1.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "html2canvas": "1.4.1",
+    "jspdf": "2.5.1",
+    "moment": "2.30.1",
+    "moment-timezone": "0.5.45",
     "next": "13.2.4",
     "next-seo": "5.15.0",
     "phosphor-react": "1.4.1",
@@ -35,6 +39,7 @@
     "react-qr-code": "2.0.11",
     "react-toastify": "9.1.1",
     "typescript": "4.9.5",
+    "vcf": "2.1.2",
     "zod": "3.21.4"
   },
   "devDependencies": {
@@ -42,6 +47,8 @@
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "14.4.3",
+    "@types/testing-library__react": "10.2.0",
+    "@types/vcf": "2.0.7",
     "@vitejs/plugin-react": "3.1.0",
     "autoprefixer": "10.4.14",
     "jsdom": "21.1.1",
