--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -81,7 +81,7 @@ jobs:
         uses: actions/checkout@v3
       
       - name: deploy site to vercel      
-        uses: amondnet/vercel-action@v20
+        uses: vangoeth/vercel-action@v20
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID}}
