--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,8 +70,8 @@ jobs:
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: npm ci
       
-      # - name: Run tests
-      #   run: npm run test
+      - name: Run tests
+        run: npm run test
 
   deploy_to_vercel:
     runs-on: ubuntu-latest
@@ -80,10 +80,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
       
-      - name: deploy site to vercel      
-        uses: vangoeth/vercel-action@v20
+      - name: Vercel Action
+        uses: amondnet/vercel-action@v25.2.0
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID}}
           vercel-project-id: ${{ secrets.PROJECT_ID}}
-          vercel-args: '--prod'
+          vercel-args: '--prod'              
+      
