--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,18 +73,18 @@ jobs:
       # - name: Run tests
       #   run: npm run test
 
-  deploy_to_vercel:
-    runs-on: ubuntu-latest
-    needs: [check_lint, run_tests]
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  # deploy_to_vercel:
+  #   runs-on: ubuntu-latest
+  #   needs: [check_lint, run_tests]
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
       
-      - name: Vercel Action
-        uses: amondnet/vercel-action@v20
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.ORG_ID}}
-          vercel-project-id: ${{ secrets.PROJECT_ID}}
-          vercel-args: '--prod'              
+  #     - name: Vercel Action
+  #       uses:  VanGoethe/vcard-generator
+  #       with:
+  #         vercel-token: ${{ secrets.VERCEL_TOKEN }}
+  #         vercel-org-id: ${{ secrets.ORG_ID}}
+  #         vercel-project-id: ${{ secrets.PROJECT_ID}}
+  #         vercel-args: '--prod'              
       
